--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,28 @@
   <name>IoC container for Pip.Services</name>
   <description>General-purpose component container for Pip.Services in Java</description>
   <url>http://www.pipservices.org</url>
+  
+  <licenses>
+    <license>
+      <name>MIT</name>
+      <url>https://opensource.org/licenses/MIT</url>
+    </license>
+  </licenses>
+
+  <developers>
+    <developer>
+      <email>seroukhov@gmail.com</email>
+	  <name>Sergey Seroukhov</name>
+	  <url>https://github.com/seroukhov</url>
+	  <id>seroukhov</id>
+    </developer>
+    <developer>
+      <email>nuzhnykhev@gmail.com</email>
+	  <name>Egor Nuzhnykh</name>
+	  <url>https://github.com/EgorNuzhnykh</url>
+	  <id>EgorNuzhnykh</id>
+    </developer>
+  </developers>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -50,33 +72,6 @@
         <artifactId>pip-services-commons</artifactId>
         <version>3.0.0-SNAPSHOT</version>
     </dependency>
-<!--
-    <dependency>
-        <groupId>com.sun.jersey</groupId>
-        <artifactId>jersey-server</artifactId>
-        <version>1.9</version>
-    </dependency>
-    <dependency>
-        <groupId>com.sun.jersey</groupId>
-        <artifactId>jersey-client</artifactId>
-        <version>1.9</version>
-    </dependency>
-    <dependency>
-        <groupId>com.sun.jersey</groupId>
-        <artifactId>jersey-json</artifactId>
-        <version>1.9</version>
-    </dependency>
-    <dependency>
-        <groupId>com.fasterxml.jackson.core</groupId>
-        <artifactId>jackson-databind</artifactId>
-        <version>2.7.2</version>
-    </dependency>
-    <dependency>
-        <groupId>org.apache.commons</groupId>
-        <artifactId>commons-lang3</artifactId>
-        <version>3.4</version>
-    </dependency>
--->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
