--- a/pom.xml
+++ b/pom.xml
@@ -141,14 +141,15 @@
               </execution>
           </executions>
       </plugin>
-     <!--  <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>exec-maven-plugin</artifactId>
-        <configuration>
-             <mainClass>test.org.pipservices.container.example.Program</mainClass>
-        </configuration>
-        </plugin>  -->
-      </plugins>
+      <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>exec-maven-plugin</artifactId>
+          <version>1.1</version>
+          <configuration>
+              <mainClass>org.pipservices.container.example.Program</mainClass>
+          </configuration>
+      </plugin>
+    </plugins>
   </build>
 
   <parent>
