--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,14 @@
               <mainClass>org.pipservices.container.example.Program</mainClass>
           </configuration>
       </plugin>
+      <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.22.1</version>
+          <configuration>
+              <useSystemClassLoader>false</useSystemClassLoader>
+          </configuration>
+      </plugin>
     </plugins>
   </build>
 
