--- a/pom.xml
+++ b/pom.xml
@@ -1,202 +1,225 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.pipservices</groupId>
-  <artifactId>pip-services3-container</artifactId>
-  <version>3.0.0</version>
-  <packaging>jar</packaging>
+    <groupId>org.pipservices</groupId>
+    <artifactId>pip-services3-container</artifactId>
+    <version>3.1.0</version>
+    <packaging>jar</packaging>
 
-  <name>Pip.Services Container</name>
-  <description>IoC container for Pip.Services in Java</description>
-  <url>http://www.github.com/pip-services/pip-services</url>
-  
-  <licenses>
-    <license>
-      <name>MIT</name>
-      <url>https://opensource.org/licenses/MIT</url>
-    </license>
-  </licenses>
+    <name>Pip.Services Container</name>
+    <description>IoC container for Pip.Services in Java</description>
+    <url>http://www.github.com/pip-services/pip-services</url>
 
-  <developers>
-    <developer>
-      <email>seroukhov@gmail.com</email>
-	  <name>Sergey Seroukhov</name>
-	  <url>https://github.com/seroukhov</url>
-	  <id>seroukhov</id>
-    </developer>
-    <developer>
-      <email>nuzhnykhev@gmail.com</email>
-	  <name>Egor Nuzhnykh</name>
-	  <url>https://github.com/EgorNuzhnykh</url>
-	  <id>EgorNuzhnykh</id>
-    </developer>
-  </developers>
-  
-  <scm>
-    <connection>scm:git:git@github.com:pip-services3-java/pip-services3-container-java.git</connection>
-    <developerConnection>scm:git:git@github.com:pip-services3-java/pip-services3-container-java.git</developerConnection>
-    <url>https://github.com/pip-services3-java/pip-services3-container-java</url>
-  </scm>
+    <licenses>
+        <license>
+            <name>MIT</name>
+            <url>https://opensource.org/licenses/MIT</url>
+        </license>
+    </licenses>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+    <developers>
+        <developer>
+            <email>seroukhov@gmail.com</email>
+            <name>Sergey Seroukhov</name>
+            <url>https://github.com/seroukhov</url>
+            <id>seroukhov</id>
+        </developer>
+        <developer>
+            <email>nuzhnykhev@gmail.com</email>
+            <name>Egor Nuzhnykh</name>
+            <url>https://github.com/EgorNuzhnykh</url>
+            <id>EgorNuzhnykh</id>
+        </developer>
+    </developers>
 
-  <build>
-    <sourceDirectory>${basedir}/src</sourceDirectory>
-    <testSourceDirectory>${basedir}/test</testSourceDirectory>
-    <outputDirectory>${basedir}/obj/src</outputDirectory>
-    <testOutputDirectory>${basedir}/obj/test</testOutputDirectory>
-    <resources>
-      <resource>
-        <directory>${basedir}/src/resources</directory>
-      </resource>
-    </resources>
-    <testResources>
-      <testResource>
-        <directory>${basedir}/test/resources</directory>
-      </testResource>
-    </testResources>
-    <directory>${basedir}/lib</directory>
-    <finalName>${project.artifactId}-${project.version}</finalName>
+    <scm>
+        <connection>scm:git:git@github.com:pip-services3-java/pip-services3-container-java.git</connection>
+        <developerConnection>scm:git:git@github.com:pip-services3-java/pip-services3-container-java.git
+        </developerConnection>
+        <url>https://github.com/pip-services3-java/pip-services3-container-java</url>
+    </scm>
 
-    <plugins>
-      <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>2.3.2</version>
-          <configuration>
-              <source>1.8</source>
-              <target>1.8</target>
-          </configuration>
-      </plugin>
-      <plugin>
-          <artifactId>maven-assembly-plugin</artifactId>
-          <version>2.3</version>
-          <configuration>
-              <descriptorRefs>
-                  <descriptorRef>jar-with-dependencies</descriptorRef>
-              </descriptorRefs>
-          </configuration>
-          <executions>
-              <execution>
-                  <phase>package</phase>
-                  <goals>
-                      <goal>single</goal>
-                  </goals>
-              </execution>
-          </executions>
-      </plugin>
-      <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-source-plugin</artifactId>
-          <version>2.1.2</version>
-          <executions>
-              <execution>
-                  <id>attach-sources</id>
-                  <goals>
-                      <goal>jar</goal>
-                  </goals>
-              </execution>
-          </executions>
-      </plugin>
-      <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-javadoc-plugin</artifactId>
-          <version>3.0.0</version>
-          <configuration>
-              <reportOutputDirectory>${basedir}/docs</reportOutputDirectory>
-              <destDir>.</destDir>
-<!--
-              <quiet>true</quiet>
-              <nonavbar>true</nonavbar>
-              <notree>true</notree>
-              <nocomment>true</nocomment>
-              <nohelp>true</nohelp>
--->
-          </configuration>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>12</maven.compiler.source>
+        <maven.compiler.target>12</maven.compiler.target>
+    </properties>
 
-          <executions>
-              <execution>
-                  <id>attach-javadocs</id>
-                  <goals>
-                      <goal>jar</goal>
-                  </goals>
-              </execution>
-          </executions>
+    <build>
+        <sourceDirectory>${basedir}/src</sourceDirectory>
+        <testSourceDirectory>${basedir}/test</testSourceDirectory>
+        <outputDirectory>${basedir}/obj/src</outputDirectory>
+        <testOutputDirectory>${basedir}/obj/test</testOutputDirectory>
+        <resources>
+            <resource>
+                <directory>${basedir}/src/resources</directory>
+            </resource>
+        </resources>
+        <testResources>
+            <testResource>
+                <directory>${basedir}/test/resources</directory>
+            </testResource>
+        </testResources>
+        <directory>${basedir}/lib</directory>
+        <finalName>${project.artifactId}-${project.version}</finalName>
 
-      </plugin>
-      <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-gpg-plugin</artifactId>
-          <version>1.6</version>
-          <executions>
-              <execution>
-                  <id>sign-artifacts</id>
-                  <phase>verify</phase>
-                  <goals>
-                      <goal>sign</goal>
-                  </goals>
-              </execution>
-          </executions>
-      </plugin>
-      <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>exec-maven-plugin</artifactId>
-          <version>1.1</version>
-          <configuration>
-              <mainClass>org.pipservices3.container.example.Program</mainClass>
-          </configuration>
-      </plugin>
-      <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.22.1</version>
-          <configuration>
-              <useSystemClassLoader>false</useSystemClassLoader>
-          </configuration>
-      </plugin>
-    </plugins>
-  </build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.1</version>
+                <configuration>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.3.0</version>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>3.2.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.4.0</version>
+                <configuration>
+                    <reportOutputDirectory>${basedir}/docs</reportOutputDirectory>
+                    <destDir>.</destDir>
+                    <!--
+                                  <quiet>true</quiet>
+                                  <nonavbar>true</nonavbar>
+                                  <notree>true</notree>
+                                  <nocomment>true</nocomment>
+                                  <nohelp>true</nohelp>
+                    -->
+                </configuration>
 
-  <parent>
-    <groupId>org.sonatype.oss</groupId>
-    <artifactId>oss-parent</artifactId>
-    <version>7</version>
-  </parent>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>1.6</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.1</version>
+                <configuration>
+                    <mainClass>org.pipservices3.container.example.Program</mainClass>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+                <configuration>
+                    <useSystemClassLoader>false</useSystemClassLoader>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <id>enforce-maven</id>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <dependencyConvergence/>
+                                <!--                                <requiredMavenVersion>-->
+                                <!--                                    <version>{$maven.minimal.version}</version>-->
+                                <!--                                </requiredMavenVersion>-->
+                            </rules>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>7</version>
+    </parent>
 
 
-  <distributionManagement>
-    <!-- Repository for snapshots -->
-    <snapshotRepository>
-        <id>sonatype-nexus-snapshots</id>
-        <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-    </snapshotRepository>
-    <!-- Repository for releases -->
-    <repository>
-        <id>nexus-releases</id>
-        <name>Nexus Release Repository</name>
-        <url>http://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-    </repository>
-  </distributionManagement>
+    <distributionManagement>
+        <!-- Repository for snapshots -->
+        <snapshotRepository>
+            <id>sonatype-nexus-snapshots</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <!-- Repository for releases -->
+        <repository>
+            <id>nexus-releases</id>
+            <name>Nexus Release Repository</name>
+            <url>http://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
 
-  <dependencies>
-    <dependency>
-        <groupId>org.pipservices</groupId>
-        <artifactId>pip-services3-commons</artifactId>
-        <version>3.0.0</version>
-    </dependency>
-    <dependency>
-        <groupId>org.pipservices</groupId>
-        <artifactId>pip-services3-components</artifactId>
-        <version>3.0.0</version>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.12</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>org.pipservices</groupId>
+            <artifactId>pip-services3-commons</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.pipservices</groupId>
+            <artifactId>pip-services3-components</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
