--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>12</maven.compiler.source>
         <maven.compiler.target>12</maven.compiler.target>
+        <manchu.version>3.0.0</manchu.version>
     </properties>
 
     <build>
@@ -70,8 +71,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.10.1</version>
                 <configuration>
-                    <source>${maven.compiler.source}</source>
-                    <target>${maven.compiler.target}</target>
+                    <release>${maven.compiler.target}</release>
                 </configuration>
             </plugin>
             <plugin>
@@ -160,6 +160,13 @@
                     <useSystemClassLoader>false</useSystemClassLoader>
                 </configuration>
             </plugin>
+            <!--Update minor and patch versions-->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>versions-maven-plugin</artifactId>
+                <version>2.7</version>
+            </plugin>
+            <!--Dependency conflicts check-->
             <plugin>
                 <artifactId>maven-enforcer-plugin</artifactId>
                 <version>3.0.0</version>
@@ -208,12 +215,12 @@
         <dependency>
             <groupId>org.pipservices</groupId>
             <artifactId>pip-services3-commons</artifactId>
-            <version>3.1.0</version>
+            <version>[${manchu.version},4.0.0-!)</version>
         </dependency>
         <dependency>
             <groupId>org.pipservices</groupId>
             <artifactId>pip-services3-components</artifactId>
-            <version>3.1.0</version>
+            <version>[${manchu.version},4.0.0-!)</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
