--- a/pom.xml
+++ b/pom.xml
@@ -170,26 +170,26 @@
                 <version>2.7</version>
             </plugin>
             <!--Dependency conflicts check-->
-            <plugin>
-                <artifactId>maven-enforcer-plugin</artifactId>
-                <version>3.0.0</version>
-                <executions>
-                    <execution>
-                        <id>enforce-maven</id>
-                        <goals>
-                            <goal>enforce</goal>
-                        </goals>
-                        <configuration>
-                            <rules>
-                                <dependencyConvergence/>
-                                <!--                                <requiredMavenVersion>-->
-                                <!--                                    <version>{$maven.minimal.version}</version>-->
-                                <!--                                </requiredMavenVersion>-->
-                            </rules>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+<!--            <plugin>-->
+<!--                <artifactId>maven-enforcer-plugin</artifactId>-->
+<!--                <version>3.0.0</version>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <id>enforce-maven</id>-->
+<!--                        <goals>-->
+<!--                            <goal>enforce</goal>-->
+<!--                        </goals>-->
+<!--                        <configuration>-->
+<!--                            <rules>-->
+<!--                                <dependencyConvergence/>-->
+<!--                                &lt;!&ndash;                                <requiredMavenVersion>&ndash;&gt;-->
+<!--                                &lt;!&ndash;                                    <version>{$maven.minimal.version}</version>&ndash;&gt;-->
+<!--                                &lt;!&ndash;                                </requiredMavenVersion>&ndash;&gt;-->
+<!--                            </rules>-->
+<!--                        </configuration>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--            </plugin>-->
             <!-- Uncomment plugin below for auto releases from staging repository -->
             <!-- <plugin>
                 <groupId>org.sonatype.plugins</groupId>
