--- a/.github/workflows/ci-pip-services3-container-java.yml
+++ b/.github/workflows/ci-pip-services3-container-java.yml
@@ -19,7 +19,8 @@ jobs:
       id: build_info
       uses: pip-devops/actions/java/prepare@v1
       with:
-        java-version: 15.0.1
+        java-version: 18.0.1
+        maven-version: 3.8.5
 
     ############# Build #############
 
