--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
             <id>seroukhov</id>
         </developer>
         <developer>
+            <email>judas.priest999@gmail.com</email>
+            <name>Danil Prisiazhnyi</name>
+            <url>https://github.com/banalna</url>
+            <id>banalna</id>
+        </developer>
+        <developer>
             <email>nuzhnykhev@gmail.com</email>
             <name>Egor Nuzhnykh</name>
             <url>https://github.com/EgorNuzhnykh</url>
